--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-  
+      <link rel="stylesheet" href="css/estilos.css">
+      <link rel="stylesheet" href="css/font-awesome.css">
+    
+      <script src="js/jquery-3.1.0.min.js"></script>
+      <script src="js/main.js"></script>
       
       <base href="/"/>
       <!--Let browser know website is optimized for mobile-->
